crates/mun_syntax/src/tests/snapshots/mun_syntax__tests__parser__const_def.snap
---
source: crates/mun_syntax/src/tests/parser.rs
expression: "const PI = 3.1415;\npub const E: f32 = 2.718;\nconst FOO = PI + E;\npub const BAR = \"a string\";"
---
SOURCE_FILE@[0; 92)
  CONST_DEF@[0; 18)
    CONST_KW@[0; 5) "const"
    WHITESPACE@[5; 6) " "
    NAME@[6; 8)
      IDENT@[6; 8) "PI"
    WHITESPACE@[8; 9) " "
    EQ@[9; 10) "="
    WHITESPACE@[10; 11) " "
    LITERAL@[11; 17)
      FLOAT_NUMBER@[11; 17) "3.1415"
    SEMI@[17; 18) ";"
  WHITESPACE@[18; 19) "\n"
  CONST_DEF@[19; 44)
    VISIBILITY@[19; 22)
      PUB_KW@[19; 22) "pub"
    WHITESPACE@[22; 23) " "
    CONST_KW@[23; 28) "const"
    WHITESPACE@[28; 29) " "
    NAME@[29; 30)
      IDENT@[29; 30) "E"
    COLON@[30; 31) ":"
    WHITESPACE@[31; 32) " "
    PATH_TYPE@[32; 35)
      PATH@[32; 35)
        PATH_SEGMENT@[32; 35)
          NAME_REF@[32; 35)
            IDENT@[32; 35) "f32"
    WHITESPACE@[35; 36) " "
    EQ@[36; 37) "="
    WHITESPACE@[37; 38) " "
    LITERAL@[38; 43)
      FLOAT_NUMBER@[38; 43) "2.718"
    SEMI@[43; 44) ";"
  WHITESPACE@[44; 45) "\n"
  CONST_DEF@[45; 64)
    CONST_KW@[45; 50) "const"
    WHITESPACE@[50; 51) " "
    NAME@[51; 54)
      IDENT@[51; 54) "FOO"
    WHITESPACE@[54; 55) " "
    EQ@[55; 56) "="
    WHITESPACE@[56; 57) " "
    BIN_EXPR@[57; 63)
      PATH_EXPR@[57; 59)
        PATH@[57; 59)
          PATH_SEGMENT@[57; 59)
            NAME_REF@[57; 59)
              IDENT@[57; 59) "PI"
      WHITESPACE@[59; 60) " "
      PLUS@[60; 61) "+"
      WHITESPACE@[61; 62) " "
      PATH_EXPR@[62; 63)
        PATH@[62; 63)
          PATH_SEGMENT@[62; 63)
            NAME_REF@[62; 63)
              IDENT@[62; 63) "E"
    SEMI@[63; 64) ";"
  WHITESPACE@[64; 65) "\n"
  CONST_DEF@[65; 92)
    VISIBILITY@[65; 68)
      PUB_KW@[65; 68) "pub"
    WHITESPACE@[68; 69) " "
    CONST_KW@[69; 74) "const"
    WHITESPACE@[74; 75) " "
    NAME@[75; 78)
      IDENT@[75; 78) "BAR"
    WHITESPACE@[78; 79) " "
    EQ@[79; 80) "="
    WHITESPACE@[80; 81) " "
    LITERAL@[81; 91)
      STRING@[81; 91) "\"a string\""
    SEMI@[91; 92) ";"

