crates/mun_syntax/src/tests/snapshots/mun_syntax__tests__parser__mut_expr.snap
---
source: crates/mun_syntax/src/tests/parser.rs
expression: "fn foo() {\n    let mut a = 3+4*5\n    a += 5\n}"
---
SOURCE_FILE@[0; 45)
  FUNCTION_DEF@[0; 45)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 6)
      IDENT@[3; 6) "foo"
    PARAM_LIST@[6; 8)
      L_PAREN@[6; 7) "("
      R_PAREN@[7; 8) ")"
    WHITESPACE@[8; 9) " "
    BLOCK_EXPR@[9; 45)
      L_CURLY@[9; 10) "{"
      WHITESPACE@[10; 15) "\n    "
      LET_STMT@[15; 32)
        LET_KW@[15; 18) "let"
        WHITESPACE@[18; 19) " "
        BIND_PAT@[19; 24)
          MUT_KW@[19; 22) "mut"
          WHITESPACE@[22; 23) " "
          NAME@[23; 24)
            IDENT@[23; 24) "a"
        WHITESPACE@[24; 25) " "
        EQ@[25; 26) "="
        WHITESPACE@[26; 27) " "
        BIN_EXPR@[27; 32)
          LITERAL@[27; 28)
            INT_NUMBER@[27; 28) "3"
          PLUS@[28; 29) "+"
          BIN_EXPR@[29; 32)
            LITERAL@[29; 30)
              INT_NUMBER@[29; 30) "4"
            STAR@[30; 31) "*"
            LITERAL@[31; 32)
              INT_NUMBER@[31; 32) "5"
      WHITESPACE@[32; 37) "\n    "
      BIN_EXPR@[37; 43)
        PATH_EXPR@[37; 38)
          PATH@[37; 38)
            PATH_SEGMENT@[37; 38)
              NAME_REF@[37; 38)
                IDENT@[37; 38) "a"
        WHITESPACE@[38; 39) " "
        PLUSEQ@[39; 41) "+="
        WHITESPACE@[41; 42) " "
        LITERAL@[42; 43)
          INT_NUMBER@[42; 43) "5"
      WHITESPACE@[43; 44) "\n"
      R_CURLY@[44; 45) "}"

