crates/mun_syntax/src/tests/snapshots/mun_syntax__tests__parser__mutable_variable.snap
---
source: crates/mun_syntax/src/tests/parser.rs
expression: "fn foo() {\n    let mut a = 5\n    a += 5\n}"
---
SOURCE_FILE@[0; 41)
  FUNCTION_DEF@[0; 41)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 6)
      IDENT@[3; 6) "foo"
    PARAM_LIST@[6; 8)
      L_PAREN@[6; 7) "("
      R_PAREN@[7; 8) ")"
    WHITESPACE@[8; 9) " "
    BLOCK_EXPR@[9; 41)
      L_CURLY@[9; 10) "{"
      WHITESPACE@[10; 15) "\n    "
      LET_STMT@[15; 28)
        LET_KW@[15; 18) "let"
        WHITESPACE@[18; 19) " "
        BIND_PAT@[19; 24)
          MUT_KW@[19; 22) "mut"
          WHITESPACE@[22; 23) " "
          NAME@[23; 24)
            IDENT@[23; 24) "a"
        WHITESPACE@[24; 25) " "
        EQ@[25; 26) "="
        WHITESPACE@[26; 27) " "
        LITERAL@[27; 28)
          INT_NUMBER@[27; 28) "5"
      WHITESPACE@[28; 33) "\n    "
      BIN_EXPR@[33; 39)
        PATH_EXPR@[33; 34)
          PATH@[33; 34)
            PATH_SEGMENT@[33; 34)
              NAME_REF@[33; 34)
                IDENT@[33; 34) "a"
        WHITESPACE@[34; 35) " "
        PLUSEQ@[35; 37) "+="
        WHITESPACE@[37; 38) " "
        LITERAL@[38; 39)
          INT_NUMBER@[38; 39) "5"
      WHITESPACE@[39; 40) "\n"
      R_CURLY@[40; 41) "}"

